Corrigindo barra de progresso meu perfil

--- a/usuarios/templates/usuarios/perfil.html
+++ b/usuarios/templates/usuarios/perfil.html
@@ -2,27 +2,39 @@
 {% block title %}Perfil do Usuário{% endblock %}
 
 {% block content %}
-  <h2 class="mb-1">{{ usuario.first_name }} {{ usuario.last_name }}</h2>
-  <p class="mb-0"><strong>Email:</strong> {{ usuario.email }}</p>
+<div class="d-flex align-items-center mb-4">
+  {% if usuario.perfil.foto %}
+    <img src="{{ usuario.perfil.foto.url }}" class="rounded-circle me-3" width="80" height="80">
+  {% else %}
+    <div class="rounded-circle bg-secondary text-white d-flex align-items-center justify-content-center me-3" style="width: 80px; height: 80px;">
+      <span>Sem Foto</span>
+    </div>
+  {% endif %}
+  <div>
+    <h2 class="mb-1">{{ usuario.first_name }} {{ usuario.last_name }}</h2>
+    <p class="mb-0"><strong>Email:</strong> {{ usuario.email }}</p>
+  </div>
+</div>
 
-  <h3 class="mt-4">Cursos Matriculados</h3>
+<h3 class="mt-4">Cursos Matriculados</h3>
 
-  {% for m in matriculas %}
-    {% with progresso.m.curso.id as prog %}
-      <div class="mb-3 p-3 bg-light rounded">
-        <h5>{{ m.curso.titulo }}</h5>
-        <div class="progress mb-1" style="height: 20px;">
-          <div class="progress-bar bg-success" role="progressbar"
-               style="width: {{ prog.percentual }}%;" 
-               aria-valuenow="{{ prog.percentual }}" 
-               aria-valuemin="0" aria-valuemax="100">
-            {{ prog.percentual }}%
-          </div>
-        </div>
-        <small>{{ prog.assistidas }} de {{ prog.total }} aulas assistidas</small>
+{% for m in matriculas %}
+  <div class="mb-3 p-3 bg-light rounded">
+    <h5 class="text-dark">{{ m.curso.titulo }}</h5>
+    
+    <div class="progress mb-1" style="height: 25px;">
+      <div class="progress-bar bg-success text-white" role="progressbar"
+          style="width: {{ m.progresso.percentual }}%;"
+          aria-valuenow="{{ m.progresso.percentual }}"
+          aria-valuemin="0" aria-valuemax="100">
+        {{ m.progresso.percentual }}%
       </div>
-    {% endwith %}
-  {% empty %}
-    <p>Você ainda não está matriculado em nenhum curso.</p>
-  {% endfor %}
+    </div>
+
+    <small class="text-dark">{{ m.progresso.assistidas }} de {{ m.progresso.total }} aulas assistidas</small>
+  </div>
+
+{% empty %}
+  <p>Você ainda não está matriculado em nenhum curso.</p>
+{% endfor %}
 {% endblock %}
