--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}Plataforma de Cursos{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 </head>
@@ -34,7 +35,6 @@
     const body = document.getElementById('body');
     const toggleBtn = document.getElementById('toggle-theme');
 
-    // Aplica tema salvo
     const theme = localStorage.getItem('theme');
     if (theme === 'dark') {
         body.classList.remove('bg-light', 'text-dark');
@@ -44,13 +44,11 @@
 
     toggleBtn.addEventListener('click', () => {
         if (body.classList.contains('bg-light')) {
-            // Ativa modo escuro
             body.classList.remove('bg-light', 'text-dark');
             body.classList.add('bg-dark', 'text-light');
             toggleBtn.textContent = '☀️';
             localStorage.setItem('theme', 'dark');
         } else {
-            // Ativa modo claro
             body.classList.remove('bg-dark', 'text-light');
             body.classList.add('bg-light', 'text-dark');
             toggleBtn.textContent = '🌙';
