Adicionando ao template do curso campo de suporte para dúvidas

--- a/cursos/templates/cursos/detalhe_curso.html
+++ b/cursos/templates/cursos/detalhe_curso.html
@@ -48,6 +48,12 @@
       </li>
     {% endfor %}
   </ul>
+  
+  <hr>
+  <div class="alert alert-info">
+    <strong>Dúvidas sobre a aula?</strong> Entre em contato com o nosso suporte: 
+    <a href="mailto:suporte@email.com">suporte@email.com</a>
+  </div>
 
   <hr>
   <h4>Deixe seu comentário</h4>
