--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,16 @@
 <body id="body" class="bg-light text-dark">
     <div class="container mt-4">
         <header class="mb-4">
+            {% if messages %}
+                <div>
+                    {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
             <a href="{% url 'lista_cursos' %}" class="text-primary text-decoration-none h1 d-block">
                 Plataforma de Cursos
             </a>
