--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
     <div class="container mt-4">
         <header class="mb-4">
             {% if messages %}
-            <div id="mensagens-alerta" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
-                {% for message in messages %}
-                <div class="alert alert-{{ message.tags }} alert-dismissible fade show mb-2" role="alert">
-                    {{ message }}
+                <div id="mensagens-alerta" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+                    {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible fade show mb-2" role="alert">
+                        {{ message|safe }}
+                    </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
-            </div>
             {% endif %}
             <a href="{% url 'lista_cursos' %}" class="text-primary text-decoration-none h1 d-block">
                 Plataforma de Cursos
@@ -74,7 +74,7 @@
     alertas.forEach(alerta => {
       alerta.classList.remove('show');
       alerta.classList.add('fade');
-      setTimeout(() => alerta.remove(), 500);
+      setTimeout(() => alerta.remove(), 1000);
     });
   }, 3000);
 </script>
