--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,9 @@
                     <a href="{% url 'meus_cursos' %}" class="btn btn-sm btn-outline-primary">Meus Cursos</a>
                     <a href="{% url 'perfil' %}" class="btn btn-secondary btn-sm">Meu Perfil</a>
                     <a href="{% url 'logout' %}" class="btn btn-sm btn-outline-danger">Sair</a>
-                    <a href="{% url 'ranking_usuarios' %}" class="text-gray-800 dark:text-white hover:underline">Ranking</a>
+                    <a href="{% url 'ranking_usuarios' %}" class="bg-blue-700 hover:bg-blue-800 text-white font-bold py-1 px-2 rounded ml-1">
+                        Ranking
+                    </a>
                 {% else %}
                     <a href="{% url 'login' %}" class="btn btn-sm btn-outline-primary">Login</a>
                     <a href="{% url 'cadastro' %}" class="btn btn-sm btn-outline-success">Cadastrar</a>
