--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,6 +7,7 @@
     <title>{% block title %}Plataforma de Cursos{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}">
 </head>
 
 </head>
@@ -29,9 +31,9 @@
                 {% if user.is_authenticated %}
                     Olá, <strong>{{ user.username }}</strong> |
                     <a href="{% url 'meus_cursos' %}" class="btn btn-sm btn-outline-primary">Meus Cursos</a>
-                    <a href="{% url 'perfil' %}" class="btn btn-secondary btn-sm">Meu Perfil</a>
+                    <a href="{% url 'perfil' %}" class="btn btn-sm btn-outline-secondary">Meu Perfil</a>
                     <a href="{% url 'logout' %}" class="btn btn-sm btn-outline-danger">Sair</a>
-                    <a href="{% url 'ranking_usuarios' %}" class="btn btn-sm btn-outline-primary">Ranking</a>
+                    <a href="{% url 'ranking_usuarios' %}" class="btn btn-sm btn-outline-purple">Ranking</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="btn btn-sm btn-outline-primary">Login</a>
                     <a href="{% url 'cadastro' %}" class="btn btn-sm btn-outline-success">Cadastrar</a>
